--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
   <div class="article-style" itemprop="articleBody">
     
-    <p>The <a target="_blank" href="https://www.aminer.cn/archive/data-context-informed-data-wrangling/5a308c4ee33a5d2723c482bb">paper</a> presents a methodology to fully automate an end-to-end data wrangling process incorporating data context, which associates portions of a target schema with potentially spurious extensional data of types that are commonly available. Data context, i.e. instance-based evidence, together with data profiling paves the way to inform automation in several steps within the wrangling process, specifically, matching, mapping validation, value format transformation, and data repair.</p>
+    <p>The <a target="_blank" href="https://ieeexplore.ieee.org/document/8258015">paper</a> presents a methodology to fully automate an end-to-end data wrangling process incorporating data context, which associates portions of a target schema with potentially spurious extensional data of types that are commonly available. Data context, i.e. instance-based evidence, together with data profiling paves the way to inform automation in several steps within the wrangling process, specifically, matching, mapping validation, value format transformation, and data repair.</p>
 
     
   </div>
@@ -839,7 +839,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://www.aminer.cn/archive/data-context-informed-data-wrangling/5a308c4ee33a5d2723c482bb">
+<a class="btn btn-primary btn-outline btn-xs" href="https://ieeexplore.ieee.org/document/8258015">
   PDF
 </a>
 
