--- a/publication/index.html
+++ b/publication/index.html
@@ -289,7 +289,7 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://www.aminer.cn/archive/data-context-informed-data-wrangling/5a308c4ee33a5d2723c482bb">
+<a class="btn btn-primary btn-outline btn-xs" href="https://ieeexplore.ieee.org/document/8258015">
   PDF
 </a>
 
